--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "types": ["vite-plugin-svgr/client"],
     "paths": {
+      "@contexts/*": ["./src/contexts/*"],
       "@images/*": ["./src/images/*"],
       "@partials/*": ["./src/partials/*"],
       "@components/*": ["./src/components/*"],
